<resources>
    <string name="app_name">NotfallApp</string>
    <string name="alertIsActive">Alarm ist aktiv!</string>
    <string name="alertInit">Alarm wird initialisiert</string>
    <string name="positionLocated">Position lokalisiert</string>
    <string name="alertTransferredInc">Alarm übertragen</string>
    <string name="email">Email adresse</string>
    <string name="password">Password</string>
    <string name="username">Benutzername</string>
    <string name="createAccount">Erstelle Benutzer</string>
    <string name="loginbutton">Einloggen</string>
    <string name="alreadyMember">Bereits einen Benutzer? Login</string>
    <string name="noUser">Sie haben noch keinen Benutzer? Registrieren Sie sich!</string>
    <string name="Authenticate">Verifizieren....</string>
    <string name="LoginFailed">Login fehlgeschlagen</string>
    <string name="emailTooShort">Feld für Benutzernamen darf nicht leer sein!</string>
    <string name="passwordTooShort">Kennwort muss mindestens 4 Zeichen lang sein.</string>
    <string name="loginMessage">Willkommen &amp; fühlen Sie sich sicher</string>
    <string name="raiseAlart">Alarm auslösen</string>
    <string name="lbAlarm">Schieben Sie, um einen Alarm auszulösen</string>
    <string name="userName">John Doe</string>
    <string name="dataProtection"><a href="https://www.wko.at/branchen/handel/D_05b-Datenschutzerklaerung-zur-Veroeffentlichung-auf-Websit.pdf">Datenschutzerklärung</a></string>
    <string name="pairFailed">Keine V.Alrt zum verbinden vorhanden!</string>
    <string name="pairSuccessfully">Erfolgreich mit V.Alrt verbunden!</string>
    <string name="sendAlarm">Alarm wird gesendet ...</string>
    <string name="abortAlarm">Zum Abbrechen schieben</string>
    <string name="Database">alarms.db</string>
    <string name="sos">SOS</string>
    <string name="btnHome">Button Home</string>
    <string name="btnAlarms">Button Alarms</string>
    <string name="btnContact">Button Contact</string>
    <string name="btnSettings">Button Settings</string>
    <string name="noContacts">Sie besitzen leider noch keine Kontakte!</string>
    <string name="contactName">Name</string>
    <string name="contactActive">Aktiv</string>
    <string name="add">Hinzufügen</string>
    <string name="noAlarms">Gottseidank besitzen Sie noch keine Alarme!</string>
    <string name="time">Zeitpunkt:</string>
    <string name="AlarmAnswered">Wer nahm an:</string>
    <string name="AlarmAccepted">Derzeit niemand!</string>
    <string name="numberAlarmDatabas">number</string>
    <string name="firstnameAlarmDatabase">firstname</string>
    <string name="lastnameAlarmDatabase">lastname</string>
    <string name="emailAlarmDatabase">email</string>
    <string name="image">image</string>
    <string name="priority">priority</string>
    <string name="active">active</string>
    <string name="prio">prio</string>
    <string name="device">Gerät:</string>
    <string name="date">Datum:</string>
    <string name="alarmType">Alarm Typ:</string>
    <string name="user">Benutzer:</string>
    <string name="comment">Kommentar:</string>
    <string name="alertLog_AlertTriggered">Alarm ausgelöst</string>
    <string name="alertLog_AlertAccepted">Alarm akzeptiert</string>
    <string name="alertLog_AlertInvalidated">Alarm ungültig</string>
    <string name="alertLog_AlertClosed">Alarm geschlossen</string>
    <string name="alertLog_CloseForcedBySystem">Schließen durch System erzwungen</string>
    <string name="alertLog_CloseForcedByMovementZone">Schließen durch Bewegungszone erzwungen</string>
    <string name="alertLog_CloseForcedByWlanConnection">Schließen durch Wlan Verbindung erzwungen</string>
    <string name="alertLog_UserContacted">Benutzer kontaktiert</string>
    <string name="alertLog_UserStatusRecallDeprecated">User erinnern</string>
    <string name="alertLog_UserContactedViaSms">Benutzer per SMS kontaktiert</string>
    <string name="alertLog_UserContactedViaEmail">Benutzer per E-Mail kontaktiert</string>
    <string name="alertLog_CallCenterContacted">Call Center kontaktiert</string>
    <string name="alertLog_UserNotReachable">Der Alarm wurde von keinem Benutzer angenommen. Erneuter Versuch später</string>
    <string name="alertLog_UserAbsent">Benutzer nicht ereichbar</string>
    <string name="alertLog_UserInactive">Benutzer ist inaktiv</string>
    <string name="alertLog_UserPhoneNumberMissing">Benutzer Telefon Nummer fehlt</string>
    <string name="alertLog_UserNoContactTypeActivated">Benutzer keine Benachrichtu</string>
    <string name="alertLog_UserAlreadyAlerted">Benutzer wurde bereits per Email und/oder SMS benachrichtigt</string>
    <string name="alertLog_UserRefused">Benutzer lehnte ab</string>
    <string name="alertLog_UserHangUp">Benutzer legte auf</string>
    <string name="alertLog_alertRestartChain">Der Alarm wurde von keinem Benutzer angenommen. Erneuter Versuch später</string>
    <string name="alertLog_alertingChainCompleted">Alarm geschlossen. (Vom System automatisch geschlossen.)</string>
    <string name="ChangeProfil">Ändere Daten</string>
    <string name="cancel">Abbrechen</string>
    <string name="deny">Ablehnen</string>
    <string name="lastname">Nachname</string>
    <string name="firstname">Vorname</string>
    <string name="number">Telefonnummer</string>
    <string name="updateProfil">Aktualisieren</string>
    <string name="cancelProfil">Abbrechen</string>
    <string name="nameSettings">name</string>
    <string name="numberSettings">telNr</string>
    <string name="ReadFile">ReadFile</string>
    <string name="ReadFilePath">File Read::---> $1§s</string>
    <string name="logout"><a onClick="">Abmelden</a></string>
    <string name="alarmcalled">Ein Alarm wurde ausgelöst!
                            In Kürze wird ein Alarm an die Zentrale weitergeleitet!</string>
    <string name="alarmcanceled">Der Alarm wurde erfolgreich abgebrochen!</string>
    <string name="alarmcanceledok">OK</string>
    <string name="alarmcalledsuccesful">Ihr Alarm wurde erfolgreich an die Zentrale weitergeleitet!
                                        Hilfe ist unterwegs!</string>
    <string name="alarmFailed">Ihr Alarm konnte leider nicht abgesendet werden, deswegen versuchen wir es nochmals!</string>
    <string name="stopAlarm">Alarm abbrechen!</string>
    <string name="unexpectedErrorLogin">Hoppla anscheinend ist ein Fehler aufgetretten der so nicht passieren sollte!
                                        Bitte verständigen Sie unseren Support!</string>
    <string name="longitude">Längengrad:</string>
    <string name="latitude">Breitengrad:</string>
    <string name="accuracy">Genauigkeit:</string>
    <string name="errorGeoInfo">konnte kein GPS bekommen</string>
    <string name="batterie">Batterie Stand:</string>
    <string name="notConnected">nicht Verbunden</string>
    <string name="connected">Verbunden</string>
    <string name="endAlarm">Schließen</string>
    <string name="Imagesaved">Bild gespeichert!</string>
    <string name="Failed">Bild speichern fehlgeschlagen!</string>
    <string name="data">data</string>
    <string name="namePicture">ProfilePicture.jpg</string>
    <string name="PictureType">image/jpeg</string>
    <string name="selectProfilPicture">Wähle ein Profilbild aus</string>
    <string name="saveProfilPicture">Speichern</string>
    <string name="nobraceletconnected">Sie haben kein Armband mit Ihrer App Verbunden</string>
    <string name="braceleteconnected">Ihr Armband wurde erfolgreich verbunden.</string>
    <string name="tryToConnectBracelet">Verbinden mit dem V.Alrt Knopf</string>
    <string name="retrySearching">Erneut suchen</string>
    <string name="sureStopSearching">Sind Sie sich sicher, dass Sie das suchen nach einem Bluetootharmband
                                    beenden wollen?</string>
    <string name="deviceNotSupportBluetooth">Es tut uns schrecklich leid, aber Ihr Geräte unterstützt
                                            kein Bluetooth!</string>
    <string name="nobluetoothdevicesfound">Wir haben leider keine Bluetoothgeräte in Ihrer nähe gefunden.
                                            Bitte versuchen Sie es erneut!</string>
    <string name="braceleterror">Hoppla, da ist wohl etwas schiefgelaufen bitte versuchen Sie es nochmal!</string>
    <string name="connect">Verbinden</string>
    <string name="noDeviceToPair">Anscheinend noch kein Gerät zum Verbinden vorhanden!</string>
    <string name="pair">Koppeln</string>
    <string name="success">%1$s war Erfolgreich!</string>
    <string name="confirm">Bestätigen</string>
    <string name="Yes">JA</string>
    <string name="No">NEIN</string>
    <string name="noPermission">Fehlende Berechtigungen</string>
    <string name="noPermissionText">Leider konnten wir nicht die notwendigen Berechtigungen von Ihnen erhalten.
                                    Deshalb können Sie die App nur eingeschränkt nutzen!</string>
    <string name="noGPS">Leider benötigen wir GPS damit wir im Falle eines Alarms ihr Position kennen.</string>
    <string name="OK">OK</string>
    <string name="access">Zulassen</string>
    <string name="noInternetAccess">Damit Sie die App Einwandfrei nutzen können benötigen wir
                                    Internetzugang!</string>
    <string name="noBluetooth">Damit Sie die App Einwandfrei nutzen können benötigen wir Bluetooth!</string>
    <string name="notificationTitle">Notfall App</string>
    <string name="alarmWasCalled">Ein Alarm wurde ausgelöst!</string>
    <string name="alarmWasSuccessful">Der Alarm war erfolgreich!</string>
    <string name="alarmWasCanceled">Der Alarm wurde abgebrochen!</string>
    <string name="title_activity_map">Map</string>
    <string name="noInternet">Kein Internet</string>
    <string name="enableInternet">Bitte schalten Sie Internet ein, damit die App funktioniert!</string>
    <string name="noGPSNotificationbar">Kein GPS</string>
    <string name="enableGPS">Bitte schalten Sie GPS ein, damit die App funktioniert!</string>
    <string name="needGPS">Damit Sie die App Einwandfrei benutzen können benötigen wir Ihren Standort!</string>
    <string name="lostConnection">Armband entfernt</string>
    <string name="reconnectBracelet">Wir haben leider die Verbindung zu Ihrem Armband verloren!</string>
    <string name="forbidden">Hoppla anscheinend stimmt Benutzername oder Passwort nicht! </string>
    <string name="internError">Hoppla anscheinend haben wir gerade Probleme mit unserem Server.</string>
    <string name="hint">Hinweis!</string>
    <string name="hintMessage">Damit wir Sie bei einem Alarm besser finden können benötigen wir, dass Sie
                                Bluetooth einschalten!</string>
    <string name="descriptionDialog">yellow warning sign with red background</string>
    <string name="personDownRegister">Person Down Timer</string>
    <string name="bookOnRegister">Book On</string>
    <string name="bookOffRegister">Book Off</string>
    <string name="braceletRegister">Armband</string>
    <string name="back">zurück</string>
    <string name="braceletStatus">Nicht verbunden</string>
    <string name="braceletBattery">0%</string>
    <string name="braceletDisconnect">Trennen</string>
    <string name="addNewBracelet">Neues Armband verbinden</string>
    <string name="BookOnOffDialog">Wir versuchen Sie %1$s</string>
    <string name="BookOn">ein zu checken</string>
    <string name="BookOff">aus zu checken</string>
    <string name="retry">Erneut versuchen</string>
    <string name="book_error">Es gab ein Problem. %1$s</string>
    <string name="book_no_Position">Wir konnten keine Position bestimmen!</string>
    <string name="book_wrong_Position">Sie befinden sich an der falschen Position!</string>
    <string name="book_inaccurate_Position">Ihre Position ist zu ungenau!</string>
    <string name="checkIn">checkin</string>
    <string name="checkout">checkout</string>
</resources>