<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@color/blueLogin"
        android:contentDescription="@string/descriptionDialog"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/alert_icon" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:layout_marginStart="70dp"
        android:max="150"
        android:minWidth="200dp"
        android:minHeight="70dp"
        android:progress="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

    <TextView
        android:id="@+id/tv_book_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/indeterminateBar"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/BookOnOffDialog"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_dialog"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorWhite"
        android:textSize="17sp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/buttonText" />
</RelativeLayout >